--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "WiringPi"]
-	path = WiringPi
+[submodule "wiringopi"]
+	path = wiringopi
 	url = https://github.com/orangepi-xunlong/wiringOP
 	branch = next
