--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,8 @@
-recursive-include WiringPi *.h
+recursive-include wiringopi *.h
 include README.rst
 include LICENSE.txt
 include bindings.i
 include constants.py
-include wiringpi-class.py
-include wiringpi.i
+include wiringopi-class.py
+include wiringopi.i
 include wiringpi_wrap.c
